add projects page

--- a/files/header.html
+++ b/files/header.html
@@ -13,15 +13,16 @@
 				<li class="nav-item"><a href="index.html" class="nav-link text-dark">Home</a></li>
 				<li class="nav-item"><a href="resume.html" class="nav-link text-dark">Resume</a></li>
 
-				<li class="nav-item dropdown" hidden>
-				  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black">
+				<li class="nav-item dropdown">
+				  <a class="nav-link dropdown-toggle" href="projects.html" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black">
 					Projects
 				  </a>
 
 				  <ul class="dropdown-menu">
-					<li><a class="dropdown-item" href="#">Capstone</a></li>
-					<li><a class="dropdown-item" href="#">Publications</a></li>
-					<li><a class="dropdown-item" href="#">Other</a></li>
+					<li><a class="dropdown-item" href="projects.html#capstone">Capstone</a></li>
+					<li><a class="dropdown-item" href="projects.html#publications">Publications</a></li>
+					<li><a class="dropdown-item" href="projects.html#entrepreneurship">Entrepreneurship</a></li>
+					<li><a class="dropdown-item" href="projects.html#other">Other</a></li>
 				  </ul>
 				</li>
 				<li class="nav-item"><a href="https://www.linkedin.com/in/joshuawolfsohn" target="_blank" class="nav-link text-dark">Contact</a></li>
