--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		<script type="module" src="https://unpkg.com/html-include-element"></script>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>resume</title>
+		<title>Resume - Joshua Wolfsohn</title>
 	</head>
 	
 	<body>
