add projects page

--- a/files/header.html
+++ b/files/header.html
@@ -20,9 +20,9 @@
 
 				  <ul class="dropdown-menu">
 					<li><a class="dropdown-item" href="projects.html#capstone">Capstone</a></li>
-					<li><a class="dropdown-item" href="projects.html#publications">Publications</a></li>
 					<li><a class="dropdown-item" href="projects.html#entrepreneurship">Entrepreneurship</a></li>
-					<li><a class="dropdown-item" href="projects.html#other">Other</a></li>
+					<li hidden><a class="dropdown-item" href="projects.html#publications">Publications</a></li>
+					<li hidden><a class="dropdown-item" href="projects.html#other">Other</a></li>
 				  </ul>
 				</li>
 				<li class="nav-item"><a href="https://www.linkedin.com/in/joshuawolfsohn" target="_blank" class="nav-link text-dark">Contact</a></li>
